각각 페이지 통일성 있게 수정

--- a/css/drink.css
+++ b/css/drink.css
@@ -9,7 +9,7 @@
   background: #fff;
 }
 .sub .sub-inner {
-  width: 1100px;
+  width: 80%;
   height: 90px;
   margin: 0 auto;
   position: relative;
@@ -36,7 +36,7 @@
 
 /* Content 부분 */
 .content {
-  width: 1100px;
+  width: 80%;
   margin: 0 auto;
   padding-bottom: 90px;
 }
@@ -215,7 +215,12 @@
 }
 
 /* itemList */
-
+.categoryList {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 .categoryList .category_title {
   padding: 20px;
   background: #f4f4f2;
@@ -224,6 +229,7 @@
   line-height: 18px;
   font-size: 18px;
   font-weight: bold;
+  width: 100%;
   color: #222;
 }
 .list {
@@ -232,12 +238,14 @@
 .item_list {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  row-gap: 10px;
-  column-gap: 23px;
+  row-gap: 23px;
+  column-gap: 90px;
+  padding: 15px;
 }
 
 .item_container {
   text-align: center;
+  width: 250px;
 }
 .item_container .item_content {
   height: 280px;
@@ -255,7 +263,7 @@
 }
 
 .item_description {
-  font-size: 14px;
+  font-size: 18px;
   color: #444;
   height: 54px;
   line-height: 54px;
