--- a/css/card.css
+++ b/css/card.css
@@ -1,194 +1,188 @@
 @import "reset.css";
-@import url('header.css');
+@import url("header.css");
 
 .wrapper {
-    width: 100%;
+  width: 100%;
 }
 .contents-layout {
-    max-width: 80%;
-    margin: 0 auto;
+  max-width: 80%;
+  margin: 0 auto;
 }
 .title {
-    height: 20px;
-    line-height: 50px;
+  height: 20px;
+  line-height: 50px;
 }
 .map {
-    text-align: right;
-    padding-bottom: 25px;
-    padding-right: 10px;
+  text-align: right;
+  padding-bottom: 25px;
+  padding-right: 10px;
 }
-.map a:hover{
-    text-decoration: underline;
+.map a:hover {
+  text-decoration: underline;
 }
 .prd-list {
-    border: 1px solid rgb(215, 215, 215);
-    border-radius: 4px;
-    height: auto;
-    padding: 15px 30px 15px 30px;
-    position: relative;
+  border: 1px solid rgb(215, 215, 215);
+  border-radius: 4px;
+  height: auto;
+  padding: 15px 30px 15px 30px;
+  position: relative;
 }
 .prd-list h3 {
-    font-size: 18px;
-    display: inline-block;
+  font-size: 18px;
+  display: inline-block;
 }
 .prd-list img {
-    position:absolute;
-    right: 30px;
+  position: absolute;
+  right: 30px;
 }
 .prd-list #category {
-    background-color: #006633;
-    color: #fff;
+  background-color: #006633;
+  color: #fff;
 }
 .prd-list .prd-list-lnb:active {
-    background-color: #006633;
-    color: #fff;
+  background-color: #006633;
+  color: #fff;
 }
 #prd-list-innerline {
-    width: 100%;
-    height: 0.5px;
-    background-color: rgb(215, 215, 215);
-    margin-top: 15px;
+  width: 100%;
+  height: 0.5px;
+  background-color: rgb(215, 215, 215);
+  margin-top: 15px;
 }
 .prd-list-lnb {
-    background-color: #f4f4f1;
-    border-radius: 3px;
-    width: 200px;
-    height: 34px;
-    display: inline-block;
-    margin-right: 10px;
-    text-align: center;
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 34px;
-    margin-top: 30px;
-    margin-bottom: 20px;
-    color: #000;
+  background-color: #f4f4f1;
+  border-radius: 3px;
+  width: 200px;
+  height: 34px;
+  display: inline-block;
+  margin-right: 10px;
+  text-align: center;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 34px;
+  margin-top: 30px;
+  margin-bottom: 20px;
+  color: #000;
 }
 .prd-list-lnb:hover {
-    text-decoration: underline;
+  text-decoration: underline;
 }
 .prd-list ul li {
-    display: inline-block;
-    font-size: smaller;
+  display: inline-block;
+  font-size: smaller;
 }
 #toggle {
-    cursor: pointer;
-    margin-top: 6px;
+  cursor: pointer;
+  margin-top: 6px;
 }
 #toggle-item.active {
-    display: none;
+  display: none;
 }
 .content select {
-    padding: 10px;
-    margin: 20px 0px;
-    border: 1px solid rgb(215, 215, 215);
-    border-radius: 3px;
-    float: right;
+  padding: 10px;
+  margin: 20px 0px;
+  border: 1px solid rgb(215, 215, 215);
+  border-radius: 3px;
+  float: right;
 }
 .content h3 {
-    clear: right;
-    background-color: #f4f4f2;
-    padding: 20px 20px;
-    border-radius: 4px;
+  clear: right;
+  background-color: #f4f4f2;
+  padding: 20px 20px;
+  border-radius: 4px;
 }
 .imgwrap img {
-    width: 260px;
-    height: 170px;
-    transition: 0.5s ease-in-out;
+  width: 260px;
+  height: 170px;
+  transition: 0.5s ease-in-out;
 }
 .imgwrap img:hover {
-    transform: scale(1.1);
+  transform: scale(1.1);
 }
 .imgwrap ul {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-start;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
 }
-.imgwrap ul li:nth-child(4n-2) {
-    margin-left: 20px;
-    margin-right: 10px;
-}
-.imgwrap ul li:nth-child(4n-1) {
-    margin-left: 10px;
-    margin-right: 20px;
+
+.imgwrap dl {
+  text-align: center;
 }
 .imgwrap dd {
-    text-align: center;
-    font-size: 14px;
-    padding: 20px 0 40px 0;
+  font-size: 14px;
+  padding: 20px 0 40px 0;
 }
 .imgwrap dt {
-    overflow: hidden;
-    border-radius: 5px;
+  overflow: hidden;
+  border-radius: 5px;
 }
 .footer {
-    background-color: #2C2A29;
-    height: 550px;
-    color: #fff;
-    margin-top: 100px;
+  background-color: #2c2a29;
+  height: 550px;
+  color: #fff;
+  margin-top: 100px;
 }
 .footer-wrap {
-    display: flex;
-    justify-content: space-around;
-    padding: 20px 150px 50px 150px;
+  display: flex;
+  justify-content: space-around;
+  padding: 20px 150px 50px 150px;
 }
 .footer-wrap ul li {
-    padding-top: 5px;
-    padding-bottom: 5px;
+  padding-top: 5px;
+  padding-bottom: 5px;
 }
 .footer-wrap ul li:first-child {
-    padding-top: 15px;
-    padding-bottom: 10px;
-    font-weight: 600;
+  padding-top: 15px;
+  padding-bottom: 10px;
+  font-weight: 600;
 }
 .footer-wrap ul li a {
-    color: #fff;
-    font-size: 12px;
+  color: #fff;
+  font-size: 12px;
 }
 .footer-wrap ul li a:hover {
-    text-decoration: underline;
+  text-decoration: underline;
 }
 .footer-imgwrap ul {
-    display: flex;
-    background-color: #282828;
-    justify-content: center;
-    padding: 10px 0 30px 0;
-    margin-bottom: 40px;
+  display: flex;
+  background-color: #282828;
+  justify-content: center;
+  padding: 10px 0 30px 0;
+  margin-bottom: 40px;
 }
 .footer-copyright ul {
-    display: flex;
-    justify-content: center;
-    font-size: 11px;
+  display: flex;
+  justify-content: center;
+  font-size: 11px;
 }
 .footer-copyright ul li a {
-    color: #fff;
-    padding: 0px 10px;
-    border-right: 1px solid #3C3C3C;
+  color: #fff;
+  padding: 0px 10px;
+  border-right: 1px solid #3c3c3c;
 }
 .footer-copyright .important {
-    color: #00b050;
-    font-weight: bolder;
+  color: #00b050;
+  font-weight: bolder;
 }
 .footer-copyright ul li a:hover {
-    text-decoration: underline;
+  text-decoration: underline;
 }
 .footer-copyright span {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 .copyright-btn a {
-    border: 2px solid #fff;
-    border-radius: 3px;
-    color: #fff;
-    padding: 10px 0px;
-    text-align: center;
-    margin: 15px 5px;
-    font-size: 11px;
-    width: 110px;
+  border: 2px solid #fff;
+  border-radius: 3px;
+  color: #fff;
+  padding: 10px 0px;
+  text-align: center;
+  margin: 15px 5px;
+  font-size: 11px;
+  width: 110px;
 }
 .footer-copyright p {
-    color: #999;
-    text-align: center;
-    font-size: 12px;
-    margin-top: 10px;
+  color: #999;
+  text-align: center;
+  font-size: 12px;
+  margin-top: 10px;
 }
