--- a/css/gift.css
+++ b/css/gift.css
@@ -1,102 +1,14 @@
 @import url("reset.css");
-
+@import url("header.css");
 :root {
   /* color */
   --green: #006633;
   --yellow-green: #639202;
   --black: #3f4141;
-  --light-black: #2C2A29;
-  --cleam: #F6F5EF;
-  --gray: #7D7D7D;
+  --light-black: #2c2a29;
+  --cleam: #f6f5ef;
+  --gray: #7d7d7d;
   --light-gray: #f4f4f2;
-}
-
-button {
-  background-color: transparent;
-  border: none;
-  outline: none;
-  cursor: pointer;
-}
-
-/* Header */
-
-header {
-  background-color: var(--cleam);
-  position: sticky;
-  top:0;
-  left: 0;
-  z-index: 2;
-  padding-top: 20px;
-}
-
-.logo {
-  width: 75px;
-  height: 75px;
-}
-
-nav {
-  width: 80%;
-  margin: auto;
-  display: flex;
-  justify-content: space-between;
-}
-
-.menus {
-  display: flex;
-  flex-direction: column;
-  align-items:flex-end;
-}
-
-.menus__sub-menu,
-.menus__main-manu {
-  display: flex;
-}
-
-.menus__sub-menu {
-  font-size: 12px;
-  margin: 0 50px 20px;
-  cursor: pointer;
-}
-
-.menus__sub-menu li {
-  color: var(--black);
-}
-
-.menus__sub-menu li:hover {
-  text-decoration: underline;
-}
-
-.menus__sub-menu button {
-  background-color: #fff;
-  font-size: 18px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  position: relative;
-  top: -4px;
-}
-
-.menus__sub-menu li,
-.menus__sub-menu button {
-  padding: 5px 10px;
-  margin: 0 10px;
-}
-
-.menus__main-manu li{
-  padding-bottom: 25px;
-  margin: 0 8px;
-}
-
-.menus__main-manu li a {
-  color: var(--black);
-  font-size: 13px;
-  text-transform: uppercase;
-  padding: 20px 20px 29px;
-}
-
-.menus__main-manu li a:hover {
-  text-decoration: underline;
-  color: var(--yellow-green);
-  background-color: var(--light-black);
 }
 
 /* Page title */
@@ -111,7 +23,7 @@ nav {
   position: relative;
   display: flex;
   justify-content: space-between;
-  padding: 20px;
+  padding: 20px 20px 20px 0;
 }
 
 .header__title {
@@ -123,14 +35,13 @@ nav {
 .header__nav {
   position: absolute;
   bottom: 0px;
-  right:0px;
+  right: 0px;
 }
 
 .header__nav a {
   color: var(--gray);
   font-size: 13px;
 }
-
 
 /* Search section */
 
@@ -224,7 +135,7 @@ nav {
   align-items: center;
 }
 
-.search__checkbox button:focus div{
+.search__checkbox button:focus div {
   background-image: url(../images/gift/check.png);
   background-size: contain;
 }
@@ -350,9 +261,10 @@ nav {
 
 .item {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(258px, 1fr));
   gap: 20px;
   margin: 30px 0 100px;
+  padding-left: 30px;
 }
 
 .item__info {
@@ -398,8 +310,7 @@ nav {
 .footer_wrap {
   margin-left: -550px;
   width: 1100px;
-  background: url(https://www.starbucks.co.kr/common/img/footer/footer_logo.png)
-    right 8px no-repeat;
+  background: url(https://www.starbucks.co.kr/common/img/footer/footer_logo.png) right 8px no-repeat;
   display: inline-block;
   left: 50%;
   position: relative;
