--- a/css/index.css
+++ b/css/index.css
@@ -297,7 +297,7 @@
 }
 
 .login__btn {
-  margin-left: 10px;
+  margin-left: 0.625em;
   border: 0.125em solid #fff;
 }
 
@@ -335,14 +335,14 @@
 }
 
 #bean__wrap {
-  height: 573px;
+  height: 35.8125em;
   background-image: url(../images/index/beanwrap/bean-bg.jpg);
   background-position: center;
   background-size: cover;
 }
 .bean__inner {
   position: relative;
-  max-width: 1080px;
+  max-width: 67.5em;
   height: 100%;
   margin: 0 auto;
 }
@@ -351,7 +351,7 @@
   position: absolute;
   top: 14.3%;
   left: 14.3%;
-  max-width: 206px;
+  max-width: 12.875em;
   width: 20%;
   animation-duration: 2s;
   animation-name: slideToRight;
@@ -371,7 +371,7 @@
   position: absolute;
   top: 33.1%;
   right: 7.9%;
-  max-width: 408px;
+  max-width: 25.5em;
   width: 38%;
   animation-duration: 2s;
   animation-name: slideToLeft;
@@ -388,7 +388,7 @@
 }
 
 .moveBean__Content img {
-  margin-bottom: 39px;
+  margin-bottom: 2.4375em;
 }
 .etc__btn a {
   width: 15.6em;
@@ -399,14 +399,83 @@
   text-align: center;
   left: 1em;
   margin-top: 3.7em;
+  transition: all 0.5s;
 }
 
 .etc__btn a:hover {
+  transition: all 0.5s;
   background-color: #1b4728;
   color: white;
   text-decoration: underline;
 }
 
+/* reserve wrap style */
+
 #reverse__wrap {
-  height: 400px;
+  height: 25em;
+  position: relative;
+  background: url(https://image.istarbucks.co.kr/upload/common/img/main/2021/reserve_sundried_brazil_bg2.jpg) no-repeat
+    center top;
+  background-size: cover;
+  overflow: hidden;
+}
+.reserve__inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  margin: 0 auto;
+}
+.reserve__inner::before {
+  display: block;
+  position: absolute;
+  top: 2.9375em;
+  left: 0;
+  width: 13.375em;
+  height: 8.125em;
+  background: url(../images/index/reservewrap/reserve_sundried_brazil_bg_shape.png) no-repeat left top;
+  content: "";
+}
+.reserve__title {
+  position: relative;
+  z-index: 10;
+  padding-top: 5.875em;
+  max-width: 67.5em;
+  width: 100%;
+  margin-right: auto;
+  margin-left: auto;
+}
+.reserve__visual {
+  display: block;
+  position: absolute;
+  right: -3%;
+  bottom: 0;
+}
+.reserve__visual img {
+  vertical-align: top;
+}
+.reserve__btn {
+  position: relative;
+  z-index: 10;
+  max-width: 67.5em;
+  margin-top: 1.75em;
+  margin-right: auto;
+  margin-left: auto;
+  padding-left: 16.75em;
+}
+
+.reserve__btn a {
+  width: 15.6em;
+  border-radius: 0.3125em;
+  border: 0.125em solid #815932;
+  color: #815932;
+  padding: 0.5em 1.687em;
+  text-align: center;
+  left: 1em;
+  transition: all 0.5s;
+}
+.reserve__btn a:hover {
+  transition: all 0.5s;
+  background-color: #815932;
+  color: white;
+  text-decoration: underline;
 }
