modify reward section

--- a/css/reset.css
+++ b/css/reset.css
@@ -64,6 +64,8 @@ footer,
 header,
 hgroup,
 menu,
+h1,
+h2,
 nav,
 output,
 ruby,
@@ -122,8 +124,7 @@ a {
   cursor: pointer;
 }
 body {
-  font-family: "nbg", "맑은 고딕", HelveticaNeue, DroidSans, Sans-serif,
-    Helvetica;
+  font-family: "nbg", "맑은 고딕", HelveticaNeue, DroidSans, Sans-serif, Helvetica;
   font-size: 1em;
   line-height: 1;
   min-width: 320px;
