--- a/css/index.css
+++ b/css/index.css
@@ -227,107 +227,121 @@
 /* reward__wrap style */
 #reward__wrap {
   background-color: #1e3932;
-  padding: 2.5em 0;
-  color: #fff;
+  padding: 1.875rem 0rem 2.5rem;
 }
 
 .reward__inner {
-  margin: 0 19.75em;
-  display: flex;
-  justify-content: center;
-  letter-spacing: 0.5px;
+  margin: 0 auto;
+  max-width: 67.5rem;
 }
-
+.reward__inner:after {
+  content: "";
+  display: block;
+  clear: both;
+}
 .reward__logo {
-  width: 10.94em;
-  margin-right: 3em;
+  float: left;
+  width: 16.3%;
+  margin: 0 2.5rem;
+  text-align: center;
 }
 .reward__logo img {
-  width: 100%;
+  width: 11rem;
 }
 .reward__contents {
-  width: 49em;
+  box-sizing: border-box;
+  float: left;
+  width: calc(83.7% - 5rem);
+  padding-right: 1.875rem;
+  color: #fff;
+  letter-spacing: 0.5px;
 }
 .reward__content {
   position: relative;
+  margin-bottom: 1.375rem;
+  border-bottom: 1px solid #4b615b;
 }
 .content__text {
-  padding-bottom: 0.625em;
-  margin-bottom: 1.375em;
-  border-bottom: 1px solid #4a605b;
-  font-size: 1em;
+  margin-bottom: 0.75rem;
+  letter-spacing: -0.5px;
 }
-
+.bold {
+  font-weight: bold;
+}
 .content__text h2 {
-  font-size: 1.625em;
-  margin: 0;
-  margin-bottom: 1.25em;
+  line-height: 1.4;
+  font-size: 26px;
+  font-weight: normal;
+  margin-bottom: 0.75rem;
 }
 
 .content__text p {
   line-height: 1.4;
-  font-weight: 700;
+  font-size: 17px;
 }
 
 .content__btn {
   position: absolute;
-  top: 3.75em;
+  bottom: 1.25rem;
   right: 0;
-  display: flex;
-  width: 11.25em;
-  text-align: center;
-  align-items: center;
-  justify-content: space-around;
+  font-size: 0;
 }
+
 .content__btn :hover {
   text-decoration: underline;
 }
 .content__btn .btns {
-  font-size: 0.94em;
-  border-radius: 0.31em;
+  box-sizing: border-box;
+  display: inline-block;
+  height: 2.375rem;
+  line-height: 2.25rem;
+  padding: 0 1.15625rem;
+  font-size: 14px;
   color: #fff;
-  width: 100%;
-  line-height: 2em;
-  height: 100%;
+  border-radius: 0.3125rem;
+  cursor: pointer;
 }
 
 .signup__btn {
   background-color: #00704a;
-  border: 0.125em solid #00704a;
+  border: 0.125rem solid #00704a;
 }
 
 .login__btn {
-  margin-left: 0.625em;
-  border: 0.125em solid #fff;
+  margin-left: 0.625rem;
+  background-color: transparent;
+  border: 0.125rem solid #fff;
 }
 
 .reward__gift {
   position: relative;
 }
 .gift__text {
-  font-size: 0.875em;
+  font-size: 14px;
+  letter-spacing: -0.5px;
 }
 
 .gift__text p {
   line-height: 1.4;
-  font-weight: 600;
 }
 
 .gift__btn {
+  box-sizing: border-box;
   position: absolute;
   top: 0;
   right: 0;
-  border: 0.125em solid #fff;
-  padding: 0em 0.44em;
-  border-radius: 0.31em;
-  width: 11.25em;
+  font-size: 14px;
+  width: auto;
+  height: 2.625rem;
+  line-height: 2.25rem;
   text-align: center;
+  padding: 0px 24px;
+  border: 2px solid #fff;
+  border-radius: 5px;
 }
 .gift__btn a {
-  font-size: 0.94em;
   color: #fff;
   width: 100%;
-  line-height: 2em;
   height: 100%;
 }
 .gift__btn :hover {
