각각의 페이지의 타이틀 위치를 똑같이 설정

--- a/css/card.css
+++ b/css/card.css
@@ -11,6 +11,10 @@
 .title {
   height: 20px;
   line-height: 50px;
+  font-size: 32px;
+  margin-top: 9px;
+  margin-bottom: 16px;
+  font-weight: bold;
 }
 .map {
   text-align: right;
