--- a/css/gift.css
+++ b/css/gift.css
@@ -195,7 +195,7 @@
   margin: 0 0 0 auto;
   padding: 13px;
   position: absolute;
-  bottom: -70px;
+  bottom: -80px;
   right: 0px;
   border: 1px solid #ccc;
   border-top: none;
@@ -233,10 +233,12 @@
 .dropdown-list img {
   height: 20px;
   width: 20px;
+  margin-right: 2px;
 }
 
 .dropdown-list span {
   font-size: 14px;
+  letter-spacing: -1px;
 }
 
 /* Item section */
@@ -245,6 +247,7 @@
   width: 80%;
   margin: auto;
   margin-bottom: 20px;
+  margin-top: 10px;
   user-select: none;
 }
 
